--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
     background-size: cover;
     background-color:coral;
     background-attachment: fixed;
+    font-size: 20px;
 }
 
 @keyframes slideIn {
